--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ header{
     text-align: center;
 }
 
+main{
+    text-align: center;
+    margin: 0 auto;
+}
+
 /* body {
     display: flex;
     align-items: center;*/
