hide next button, to prevent spam

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ header {
     background-color: #b8e1ba;
 }
 
+#next-button{
+    margin-top: 17px;
+}
+
 .game-variables {
     font-style: italic;
 }
